# LogStreamGC

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  env-us_east_1  env-us_east_2  log-stream-gc.tf
.claude/: settings.local.json
.github/workflows/: build-and-deploy.yml  build-and-test.yml  ci.yml  claude-code-review.yml  deploy-lambda.yml  deploy.yml
src/: lambda.rs  lib.rs  main.rs
