[package]
name = "log-stream-gc"
authors = ["Jacob Luszcz"]
default-run = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
aws-config = { version = "1.*", features = ["behavior-version-latest"] }
aws-sdk-cloudwatchlogs = { version = "1.*", features = ["behavior-version-latest"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["env"] }
fern = "0.7"
jluszcz_rust_utils = { git = "https://github.com//jluszcz/rust-utils" }
lambda_runtime = "0.13"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.*", features = ["full"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "lambda"
path = "src/lambda.rs"
