[package]
name = "log-stream-gc"
authors = ["Jacob Luszcz"]
default-run = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
aws-config = { version = "1.*", features = ["behavior-version-latest"] }
aws-sdk-cloudwatchlogs = { version = "1.*", features = ["behavior-version-latest"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["env"] }
futures = "0.3"
jluszcz_rust_utils = { git = "https://github.com//jluszcz/rust-utils" }
lambda_runtime = "1.0"
log = "0.4"
regex = "1.11"
serde_json = "1.0"
tokio = { version = "1.*", features = ["full"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "lambda"
path = "src/lambda.rs"
